:zap: 배포 exe 파일 리펙토링 - 1